# MyExercise

./: .dockerignore  .gitattributes  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  postCreateCommand.sh
dags/: d_01_crawler_volume_dag.py  d_02_crawler_weather_dag.py
utils/: test.py
